# sfileop

./: CMakeLists.txt  LICENSE  README.md  config.h.in  configtemplate.h  readwritefunctions.h  schangelen.c  sread.c  swrite.c
doc/: sread.1  swrite.1
